fix: small white part on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,11 @@
 :root{
   font-family: "Inter", sans-serif;
 }
+
+body{
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
